this commit is important, it has prevented all sql injection attacks in location_history by either using prepared statements or using mysqli::real_escape_string

--- a/location_history/css/style.css
+++ b/location_history/css/style.css
@@ -208,6 +208,10 @@ li#weekdays-container {
 	margin-top: 8px;
 }
 
+label.checkbox {
+	color: black !important;
+}
+
 li#search-container {
 	margin-top: 11px;
 	margin-right: 10px;
